--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.4.1",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
+    "react-mobile-devices": "^0.1.0",
     "react-notifications": "^1.4.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
